--- a/java/build.gradle
+++ b/java/build.gradle
@@ -18,24 +18,18 @@ repositories {
 
 ext {
     swagger_annotations_version = "1.5.8"
-    jackson_version = "2.7.0"
-    jersey_version = "1.19.1"
+    okhttp_version = "2.7.5"
+    logging_interceptor_version = "2.7.5"
+    gson_version = "2.6.2"
     jodatime_version = "2.9.3"
-    junit_version = "4.12"
 }
 
 dependencies {
     compile "io.swagger:swagger-annotations:$swagger_annotations_version"
-    compile "com.sun.jersey:jersey-client:$jersey_version"
-    compile "com.sun.jersey.contribs:jersey-multipart:$jersey_version"
-    compile "com.fasterxml.jackson.core:jackson-core:$jackson_version"
-    compile "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
-    compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
-    compile "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jackson_version"
-    compile "com.fasterxml.jackson.datatype:jackson-datatype-joda:2.1.5"
+    compile "com.squareup.okhttp:okhttp:$okhttp_version"
+    compile "com.squareup.okhttp:logging-interceptor:$logging_interceptor_version"
+    compile "com.google.code.gson:gson:$gson_version"
     compile "joda-time:joda-time:$jodatime_version"
-    compile "com.brsanthu:migbase64:2.2"
-    testCompile "junit:junit:$junit_version"
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
